more spacing fixes

--- a/frontend/src/Songhill.css
+++ b/frontend/src/Songhill.css
@@ -87,10 +87,6 @@ p.logo-bubble {
   display: none;
 }
 
-.processing-txt {
-  margin-bottom: 0.25em;
-}
-
 h2.title {
   margin: 0;
   color: var(--tron-blue);
